# engram

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN-CONTEXT-REPOS.md  README.md  package-lock.json  package.json
.beads/: metadata.json
.github/workflows/: config-drift.yml  harness-validation.yml  mcp-smoke.yml  quality-report.yml
convex/: schema.ts
docs/: API-REFERENCE.md  GOLDEN-PRINCIPLES.md  INSTITUTIONAL_LEARNINGS.md
docs/brainstorms/: 2026-03-17-unified-memory-plugin-brainstorm.md
docs/patterns/: progressive-disclosure.md  qa-retrieval.md  version-history.md
mcp-server/: package-lock.json  package.json
mcp-server/src/lib/: convex-paths.ts  embeddings.ts
mcp-server/src/lib/convex-client/: agents-scopes.ts  facts.ts
mcp-server/src/lib/tool-registry/: lifecycle-entries.ts
mcp-server/src/tools/: sleep-reflect.ts
rust/: Cargo.toml
rust/crates/engram-ai/: Cargo.toml
rust/crates/engram-ai/src/: lib.rs
rust/crates/engram-core/: Cargo.toml
rust/crates/engram-core/src/: lib.rs
rust/crates/engram-daemon/: Cargo.toml
rust/crates/engram-fs/: Cargo.toml
rust/crates/engram-fs/src/: lib.rs
rust/crates/engram-observer/: Cargo.toml
rust/crates/engram-observer/src/: lib.rs
rust/crates/engram-retrieval/: Cargo.toml
rust/crates/engram-retrieval/src/: lib.rs
rust/crates/engram-sync/: Cargo.toml
rust/crates/engram-sync/src/: lib.rs  main.rs
rust/crates/engram-types/: Cargo.toml
rust/crates/engram-types/src/: lib.rs
