[workspace]
members = [
    "crates/engram-types",
    "crates/engram-core",
    "crates/engram-retrieval",
    "crates/engram-ai",
    "crates/engram-sync",
    "crates/engram-observer",
    "crates/engram-fs",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
lancedb = "0.11"
anyhow = "1.0"
thiserror = "1.0"

[patch.crates-io]
chrono = { git = "https://github.com/chronotope/chrono", tag = "v0.4.39" }
