[package]
name = "engram-core"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-types = { path = "../engram-types" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
engram-ai = { path = "../engram-ai" }
uuid = { version = "1.0", features = ["v4"] }
