[package]
name = "engram-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-core = { path = "../engram-core" }
engram-sync = { path = "../engram-sync" }
lancedb = { workspace = true }
engram-types = { path = "../engram-types" }
tokio = { version = "1.0", features = ["full"] }
chrono = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = "0.4"
env_logger = "0.11"
