[package]
name = "engram-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-core = { path = "../engram-core" }
engram-sync = { path = "../engram-sync" }
engram-types = { path = "../engram-types" }
notify = "6.1"
uuid = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
blake3 = "1.5"
